kutuapp-test/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kutuapp
  namespace: kutuapp-test
  annotations:
    kubernetes.io/tls-acme: 'true'
spec:
  host: competition.sharevic.net
  path: /
  to:
    kind: Service
    name: kutuapp
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
